update bigdata architect post